[gd_scene load_steps=6 format=3 uid="uid://k2x11a06v1p4"]

[ext_resource type="Script" path="res://Scripts/interactable.gd" id="1_curpd"]
[ext_resource type="Texture2D" uid="uid://doqpkgnvjs0l" path="res://Art/Keyboard & Mouse/Default/keyboard_e.png" id="2_tymtc"]
[ext_resource type="FontFile" uid="uid://cxpcmv16un05" path="res://Art/Fonts/m3x6.ttf" id="3_tm0fw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f3deo"]
radius = 17.0
height = 82.0

[sub_resource type="LabelSettings" id="LabelSettings_uf2ss"]
font = ExtResource("3_tm0fw")
font_size = 20

[node name="Interactable" type="Node2D"]
z_index = 10
script = ExtResource("1_curpd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f3deo")
debug_color = Color(1, 1, 1, 0.419608)

[node name="KeyboardE" type="Sprite2D" parent="."]
visible = false
position = Vector2(-26, -30)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_tymtc")

[node name="E to Interact" type="Label" parent="."]
visible = false
offset_left = -95.0
offset_top = -65.0
offset_right = 120.0
offset_bottom = 2.0
text = "to interact"
label_settings = SubResource("LabelSettings_uf2ss")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
